Moved config to externalized file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ chatgpt.api.key=
 did.url=https://api.d-id.com
 did.key=
 
-aws.s3.bucket=engineeredtoamaze
+aws.s3.bucket=
 aws.clientId=
 aws.authKey=
 
