moved chatgpt URL to config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 tts_url=https://api.elevenlabs.io
 tts_key=
 
+chatgpt.api.url=https://api.openai.com/v1/chat/completions
 chatgpt.api.key=
+
 did.url=https://api.d-id.com
 did.key=
 
