--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,6 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.cache.type=caffeine
-spring.cache.cache-names=tts,chat,video,s3
-spring.cache.caffeine.spec=maximumSize=50000,expireAfterAccess=6000s,recordStats
+spring.cache.cache-names=tts,chat,video,s3,details
+spring.cache.caffeine.spec=maximumSize=5000,expireAfterAccess=6000s,recordStats
 management.endpoints.web.exposure.include=caches
