--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+baseUrl=http://localhost:8080
+
 tts_url=https://api.elevenlabs.io
 tts_key=
 
@@ -11,6 +13,26 @@ aws.s3.bucket=
 aws.clientId=
 aws.authKey=
 
+google.project.id=6b48552e-e122-4ee9-9826-2409064ae3f6
+google.auth.registration=google
+google.auth.proxy=
+
+spring.security.oauth2.client.registration.google.client-id=538117373288-4sqeud4i1hl1agdulbe1iu7p2aklqelo.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.scope=profile,email,openid,https://www.googleapis.com/auth/sdm.service
+spring.security.oauth2.client.registration.google.redirect-uri=${baseUrl}/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth?access_type=offline
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=name
+
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=10
+spring.task.execution.pool.queue-capacity=25
+spring.task.execution.pool.keep-alive=90s
+
 starting.prompt=Tell me you are working on getting me an answer and to wait a minute. Respond without explanation
 reminder.prompt=Tell me to keep waiting for results. Respond without explanation
 smalltalk.prompt=Tell a random interesting fact.  Respond without explanation
@@ -19,12 +41,19 @@ smalltalk.number=0
 starting.number=1
 intro.number=1
 
-logging.level.ai.asktheexpert=DEBUG
+narration.prompt=These are frames of a video. Create a short voiceover script in the style of David Attenborough. Make it funny and snarky. The response should not exceed 150 words. If there is anything remotely interesting, make a big deal about it! If there aren't any animals or people, narrate about the surroundings but comment on something. Only include the narration.
+
+narration.assistant=The following is a narration as read in the style of David Attenborough. Read it but insert changes based on your personality. Don't be overly poetic or fluffy with words. Do not excessively bring up Mocha unless she was seen in the narration. The response should not exceed 100 words.
+
+logging.level.ai.asktheexpert=debug
+logging.logback.rollingpolicy.clean-history-on-start=true
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.cache.type=caffeine
-spring.cache.cache-names=tts,chat,video,s3,details
+spring.cache.cache-names=tts,chat,video,s3,details,stream,events,cameras
 spring.cache.caffeine.spec=maximumSize=5000,expireAfterAccess=6000s,recordStats
 management.endpoints.web.exposure.include=caches
+
+camera.alias={}
