Improved auth and prompts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,9 +41,9 @@ smalltalk.number=0
 starting.number=1
 intro.number=1
 
-narration.prompt=These are frames of a video. Create a short voiceover script in the style of David Attenborough. Make it funny and snarky. The response should not exceed 150 words. If there is anything remotely interesting, make a big deal about it! If there aren't any animals or people, narrate about the surroundings but comment on something. Only include the narration.
+narration.prompt=These are frames of a video from an outdoor camera. Create a short voiceover script in the style of David Attenborough. Make it funny and snarky. If there is anything remotely interesting, make a big deal about it! Pay attention to details and special focus on any living things shown. Only include the narration.
 
-narration.assistant=The following is a narration as read in the style of David Attenborough. Read it but insert changes based on your personality. Don't be overly poetic or fluffy with words. Do not excessively bring up Mocha unless she was seen in the narration. The response should not exceed 100 words.
+narration.assistant=The following is a narration as read in the style of David Attenborough from watching a video from an outdoor camera. Create your own response using it but insert changes based on your personality. Your response should not exceed 100 words and focuses on important details of what was seen. Don't be overly poetic or fluffy with words.
 
 logging.level.ai.asktheexpert=debug
 logging.logback.rollingpolicy.clean-history-on-start=true
