Added support for Blink

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,17 @@ aws.s3.bucket=
 aws.clientId=
 aws.authKey=
 
+blink.auth.url=https://rest-prod.immedia-semi.com
+blink.login.url=${blink.auth.url}/api/v5/account/login
+blink.email=
+blink.pwd=
+blink.uuid=
+
+blink.postauth.url=https://rest-{0}.immedia-semi.com
+blink.videos.url=${blink.postauth.url}/api/v1/accounts/{1}/media/changed?since={2}&page={3}
+blink.homescreen.url=${blink.postauth.url}/api/v3/accounts/{1}/homescreen
+blink.livestream.url=${blink.postauth.url}/api/v5/accounts/{1}/networks/{2}/cameras/{3}/liveview
+
 google.project.id=6b48552e-e122-4ee9-9826-2409064ae3f6
 google.auth.registration=google
 google.auth.proxy=
@@ -41,9 +52,9 @@ smalltalk.number=0
 starting.number=1
 intro.number=1
 
-narration.prompt=These are frames of a video from an outdoor camera. Create a short voiceover script in the style of David Attenborough. Make it funny and snarky. If there is anything remotely interesting, make a big deal about it! Pay attention to details and special focus on any living things shown. Only include the narration.
+narration.prompt=These are frames of a video from an outdoor camera. Create a voiceover narration providing the details of everything you observe and make assumptions on what happened based on the differences in the frames. Only include the narration. If the images are too similar, tell a story on any of the images provided.
 
-narration.assistant=The following is a narration as read in the style of David Attenborough from watching a video from an outdoor camera. Create your own response using it but insert changes based on your personality. Your response should not exceed 100 words and focuses on important details of what was seen. Don't be overly poetic or fluffy with words.
+narration.assistant=The following is a narration from watching a video from an outdoor camera. Create your own story using the details but base it on your personality. Treat this a video and do not reference to frames. Your response should not exceed 80 words. Focus on important details of what was seen. Make a big deal out of anything that is evenly remotely interesting!
 
 logging.level.ai.asktheexpert=debug
 logging.logback.rollingpolicy.clean-history-on-start=true
@@ -52,7 +63,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.cache.type=caffeine
-spring.cache.cache-names=tts,chat,video,s3,details,stream,events,cameras
+spring.cache.cache-names=tts,chat,video,s3,details,stream,events,cameras,blinkCameras
 spring.cache.caffeine.spec=maximumSize=5000,expireAfterAccess=6000s,recordStats
 management.endpoints.web.exposure.include=caches
 
