Updated for to have narration without digital identity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,9 +52,8 @@ smalltalk.number=0
 starting.number=1
 intro.number=1
 
-narration.prompt=These are frames of a video from an outdoor camera. Create a voiceover narration providing the details of everything you observe and make assumptions on what happened based on the differences in the frames. Only include the narration. If the images are too similar, tell a story on any of the images provided.
-
-narration.assistant=The following is a narration from watching a video from an outdoor camera. Create your own story using the details but base it on your personality. Treat this a video and do not reference to frames. Your response should not exceed 80 words. Focus on important details of what was seen. Make a big deal out of anything that is evenly remotely interesting!
+narration.prompt=These are images from a video {context}. Create a narration providing the details of everything you observe and make assumptions on what happened based on the differences in the frames. Provide specific observations on the surroundings, including people, animals, structures, and objects. Only include the narration. If the images are too similar, tell a story based on any image. {engineeredPrompt}.
+narration.assistant=The following is a narration from a video stream. Please provide a brief response, no more than 40 words. Create your own story using the details but base it on your personality. Treat this as a video and do not reference to frames. Keep it conversational and don't repeat yourself with things you have already said. Focus on important details of what was seen and anything different from your past conversation. Make a big deal out of anything that is evenly remotely interesting!
 
 logging.level.ai.asktheexpert=debug
 logging.logback.rollingpolicy.clean-history-on-start=true
@@ -68,3 +67,4 @@ spring.cache.caffeine.spec=maximumSize=5000,expireAfterAccess=6000s,recordStats
 management.endpoints.web.exposure.include=caches
 
 camera.alias={}
+camera.context={}
