--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
+            <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -107,6 +107,13 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version> <!-- Check for the latest version -->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-aiplatform -->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-aiplatform</artifactId>
+            <version>3.42.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
