--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,8 +52,8 @@ smalltalk.number=0
 starting.number=1
 intro.number=1
 
-narration.prompt=These are images from a video {context}. Create a narration providing the details of everything you observe and make assumptions on what happened based on the differences in the frames. Provide specific observations on the surroundings, including people, animals, structures, and objects. Only include the narration. If the images are too similar, tell a story based on any image. {engineeredPrompt}.
-narration.assistant=The following is a narration from a video stream. Please provide a brief response, no more than 40 words. Create your own story using the details but base it on your personality. Treat this as a video and do not reference to frames. Keep it conversational and don't repeat yourself with things you have already said. Focus on important details of what was seen and anything different from your past conversation. Make a big deal out of anything that is evenly remotely interesting!
+narration.prompt=These are images from a video {context}. Create a narration providing the details of everything you observe and make assumptions on what happened based on the differences in the frames. Provide specific observations on the surroundings, including people, animals, structures, and objects. Only include the narration without formatting and in a way that can be read out loud. If the images are too similar, tell a story based on any image. {engineeredPrompt}.
+narration.assistant=The following is a narration from a video stream. Please provide a brief response, no more than 40 words. Create your own story using the details but base it on your personality. Treat this as a video and do not reference to frames. Keep it conversational and don't repeat yourself with things you have already said. Focus on important details of what was seen and relate it to information from your past conversations. Make a big deal out of anything that is evenly remotely interesting!
 
 logging.level.ai.asktheexpert=debug
 logging.logback.rollingpolicy.clean-history-on-start=true
